// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kiwi-modal renders 1`] = `
<kiwi-modal id="modalId" open="">
  <!---->
  <div class="fade modal show">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-default modal-header">
          <button aria-hidden="true" class="close" type="close">
            ×
          </button>
          <h4 class="modal-title">
            <i slot="kiwi-modal-title">
              Italic Modal Header
            </i>
          </h4>
        </div>
        <div class="modal-body">
          <div slot="kiwi-modal-body">
            Press Escape to close the modal
          </div>
        </div>
        <kiwi-modal-footer slot="kiwi-modal-footer">
          <!---->
          <div class="modal-footer">
            <button class="btn btn-link">
              <slot-fb name="kiwi-modal-footer-cancel">
                Cancel
              </slot-fb>
            </button>
            <button class="btn btn-primary">
              <slot-fb name="kiwi-modal-footer-confirm">
                Ok
              </slot-fb>
            </button>
          </div>
        </kiwi-modal-footer>
      </div>
    </div>
  </div>
  <div class="fade modal-backdrop show" style="display: none;"></div>
</kiwi-modal>
`;

exports[`kiwi-modal renders with size large 1`] = `
<kiwi-modal>
  <!---->
  <i hidden="" slot="kiwi-modal-title">
    Italic Modal Header
  </i>
  <div class="modal">
    <div class="modal-dialog modal-lg">
      <div class="modal-content">
        <div class="modal-body">
          <div slot="kiwi-modal-body">
            large
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="modal-backdrop" style="display: none;"></div>
</kiwi-modal>
`;

exports[`kiwi-modal renders with size small 1`] = `
<kiwi-modal>
  <!---->
  <i hidden="" slot="kiwi-modal-title">
    Italic Modal Header
  </i>
  <div class="modal">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-body">
          <div slot="kiwi-modal-body">
            small
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="modal-backdrop" style="display: none;"></div>
</kiwi-modal>
`;
